--- a/MEAN/weatherAPI/package.json
+++ b/MEAN/weatherAPI/package.json
@@ -1,7 +1,6 @@
 {
   "name": "weatherAPI",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,5 +12,6 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1"
-  }
+  },
+  "description": ""
 }
